--- a/sass/github.scss
+++ b/sass/github.scss
@@ -3,4 +3,13 @@
         color: grey;
         font-style: italic;
     }
+
+    .repo_link {
+        text-decoration: none;
+        color: black;
+
+        &:hover {
+            text-decoration: underline;
+        }
+    }
 }
