--- a/templates/tweet.html
+++ b/templates/tweet.html
@@ -1,6 +1,6 @@
 <div class="tweet col-md-12">
     <div class="col-md-1 ticon">
-        <a class="tlink" href="https://twitter.com/dorthu22">
+        <a class="tlink" href="{{ data.tweet_url }}">
             <i class="fa fa-twitter"></i>
         </a>
     </div>
