--- a/templates/github.html
+++ b/templates/github.html
@@ -11,7 +11,11 @@
 
     </div>
     <div class="col-md-10">
-        {{ data.repo }} :: <span class="desc">{{ data.content }}</span>
+        <a class='repo_link' href="https://github.com/{{ data.repo }}">
+            {{ data.repo }}
+        </a>
+         :: 
+         <span class="desc">{{ data.content }}</span>
     </div>
     <div class="col-md-1">
         {{ data.timestamp.strftime("%-m/%-d/%Y") }}
