--- a/sass/post.scss
+++ b/sass/post.scss
@@ -1,15 +1,37 @@
 .post {
+    border-top: 1px solid grey;
+    border-bottom: 1px solid grey;
+    margin-top: 1em;
+    margin-bottom: 1em;
+    padding-top: 5px;
+    padding-bottom: 5px;
 
     .title {
-        font-size: large;
-        font-style: bold;
+        font-size: xx-large;
+        font-style: bolder;
         margin-bottom: 0px;
+
+        a {
+            text-decoration: none;
+            color: black;
+
+            &:hover {
+                text-decoration: underline;
+            }
+        }
     }
 
     .subheader {
         font-size: small;
         font-style: italic;
         color: grey;
+    }
+
+    .post_date {
+        color: grep;
+        font-style: italic;
+        font-size: small;
+        line-height: 300%;
     }
 
 }
