--- a/templates/tweet.html
+++ b/templates/tweet.html
@@ -1,17 +1,19 @@
 <div class="tweet col-md-12">
-    <div class="col-md-1 ticon">
-        <a class="tlink" href="{{ data.tweet_url }}">
-            <i class="fa fa-twitter"></i>
-        </a>
+    <div class="row">
+        <div class="col-md-6 ticon">
+            <a class="tlink" href="{{ data.tweet_url }}">
+                <i class="fa fa-twitter"></i> Tweeted
+            </a>
+        </div>
+        <div class="ttimestamp col-md-6 pull-right">
+            {{ data.created.strftime("%-m/%-d/%Y") }}
+        </div>
     </div>
-    <div class="col-md-11 tbody">
-        <div class="col-md-10">
+    <div class="row">
+        <div class="col-md-12 tbody">
             <span class='tcontent'>
                 {{ data.content }}
             </span>
-        </div>
-        <div class="ttimestamp col-md-2 pull-right">
-            {{ data.created.strftime("%-m/%-d/%Y") }}
         </div>
     </div>
 </div>
