Generate individual pages

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -40,6 +40,11 @@ body {
         font-size: xx-large;
         font-style: bolder;
         margin-bottom: 1em;
+
+        a {
+            text-decoration: none;
+            color: black;
+        }
     }
 
     .sideheader {
