--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,9 @@
     {% endblock %}
     <div class="container">
         <div class="row" id="header">
+            <a href="http://dorthu.com">
                 # Dorthu.com
+            </a>
         </div>
         <div class="row">
             <div class='col-md-9'>
