--- a/templates/base.html
+++ b/templates/base.html
@@ -10,45 +10,80 @@
 </head>
 <body>
     {% block header %}
-    <div id="bg"></div>
-    <div id="a"></div>
-    <div id="b"></div>
-    {% endblock %}
-    <div class="container">
-        <div class="row" id="header">
+    <div class="container-fluid" id="header">
+        <div class="col-md-8 col-md-offset-2 text-center">
             <a href="http://dorthu.com">
-                # Dorthu.com
+                <img src="http://gravatar.com/avatar/9a9b276fd38709d2dd59c5b010a100e6"/>
             </a>
         </div>
-        <div class="row">
-            <div class='col-md-9'>
+    </div>
+    {% endblock %}
+    <div class="container-fluid" id="main">
+        <div class="row-fluid">
+            <div class='col-md-2 text-center'>
+                <canvas id="flame-left" width="100" height="100"></canvas>
+            </div>
+            <div class='col-md-8'>
                 {% block content %}
                 {% endblock %}
             </div>
-            <div class='col-md-3'>
-                {% include 'infobox.html' %}
-                <br/>
-                <div class="row">
-                    <div class="col-md-12">
-                        <span class="sideheader">Recent Activity:</span>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-lg-12 hidden-sm hidden-xs">
-                        {% for data in features %}
-                            {% if data.type == 'tweet' %}
-                                {% include 'tweet.html' %}
-                            {% elif data.type == 'github' %}
-                                {% include 'github.html' %}
-                            {% endif %}
-                        {% endfor %}
-                    </div>
-                </div>
+            <div class='col-md-2'>
+                <canvas id="flame-right" width="100" height="100"></canvas>
             </div>
         </div>
     </div>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"
         integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+    <script>
+        var ctxl = ctxr = null;
+
+        ctxl = document.getElementById('flame-left').getContext('2d');
+        ctxr = document.getElementById('flame-right').getContext('2d');
+
+        var ctxs = [ ctxl, ctxr ];
+        var particles = [];
+
+        function make_particle(x,y) {
+            return { x: x, y: y, color: { r: 1, g: 0, b: 0 } };
+        }
+
+        function update_particle(part, step) {
+            part.y = part.y - step;
+            part.color.g = part.color.g + step;
+            part.color.b = part.color.b + step;
+
+            return part.y < 10;
+        }
+
+        function animate_flames() {
+            for(var i=0; i<ctxs.length; i++) {
+                console.log('flame holder');
+                var ctx = ctxs[i];
+                ctx.fillStyle = "rgba(0,0,0,1)";
+                ctx.beginPath();
+                ctx.moveTo(20,20);
+                ctx.lineTo(40,20);
+                ctx.lineTo(40,25)
+                ctx.quadraticCurveTo(30,40,20,25);
+                ctx.closePath();
+                ctx.fill();
+
+                for(var i=0; i<particles.length; i++) {
+                    console.log("particle loop");
+                    var cur = particles[i];
+                    update_particle(cur, 1);
+                }
+            }
+        }
+
+        function make_particles() {
+            for(var i=0; i<6; i++) {
+                particles.push(make_particle(20 + Math.random()*20, 20));
+            }
+        }
+
+        animate_flames();
+    </script>
     {% block scripts %}
     {% endblock %}
 </body>
