--- a/templates/post.html
+++ b/templates/post.html
@@ -1,7 +1,7 @@
 <div class="post col-md-12">
     <div class="row">
         <span class="col-md-10 title">
-            <a href="{{ data.post_url }}">{{ data.title }}</a>
+            <a href="/entries/{{ data.post_url }}">{{ data.title }}</a>
         </span>
         <span class="col-md-1 post_date">{{ data.posted.strftime("%-m/%-d/%Y") }}</span>
     </div>
