--- a/sass/main.scss
+++ b/sass/main.scss
@@ -48,4 +48,10 @@ body {
         font-size: medium;
         text-decoration: underline;
     }
+
+    .centered {
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+    }
 }
