I think that does it

--- a/templates/base.html
+++ b/templates/base.html
@@ -13,8 +13,18 @@
     <div class="container-fluid" id="header">
         <div class="col-md-8 col-md-offset-2 text-center">
             <a href="http://dorthu.com">
-                <img src="http://gravatar.com/avatar/9a9b276fd38709d2dd59c5b010a100e6"/>
+                <img src="http://gravatar.com/avatar/9a9b276fd38709d2dd59c5b010a100e6"
+                    width="300"; height="300";/>
             </a>
+            <br/>
+        </div>
+    </div>
+    <div class="container-fluid">
+        <div class="col-md-4 col-md-offset-2 text-center">
+            <a href="https://github.com/Dorthu">Github</a>
+        </div>
+        <div class="col-md-4 text-center">
+            <a href="https://linkedin.com/in/Dorthu">LinkedIn</a>
         </div>
     </div>
     {% endblock %}
